tests/latch/static/failing/rguistyler.wat
version https://git-lfs.github.com/spec/v1
oid sha256:1f8f66d0b7210f9e6df094d7db5a2cbfa00225dc09412b95093304b914994a87
size 6622174
